<resources>
    <string name="app_name">Teacher Assistant</string>
    <!--Welcome Screen-->
    <string name="ws_title">Teacher Assistant</string>
    <string name="ws_subtitle">Manage your courses with ease</string>
    <string name="ws_to_courses">Courses</string>
    <string name="ws_to_student_list">Students</string>
    <string name="ws_to_report">Report</string>

    <!--Student List-->
    <string name="s_title">Students</string>
    <string name="s_to_add_student">Add new student</string>

    <!--Raport-->
    <string name="r_title">Raport</string>

    <!--Course List-->
    <string name="cl_title">Your courses</string>

    <!--Add Student-->
    <string name="as_first_name">First Name</string>
    <string name="as_last_name">Last Name</string>
    <string name="as_add">Add</string>

    <!--Add Course-->
    <string name="ac_course_name">Course Name</string>
    <string name="ac_add">Add</string>

    <!--Row Student Grade-->
    <string name="row_sg_grades">Last Grades: </string>
    <string name="row_sg_avrage">Avrage: </string>

    <!--Mark Student-->
    <string name="ms_grades">Grade: </string>
    <string name="ms_desc">Description: </string>
    <string name="ms_btn">Submit</string>

    <!--Add Course Student-->
    <string name="acs_add_btn">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>