<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.WelcomeScreen"
    android:background="@color/colorPrimaryDark"
    android:padding="10dp">

    <TextView
        android:id="@+id/ws_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/ws_title"
        android:textColor="@color/colorTextMain"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ws_subtitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/ws_subtitle"
        android:textColor="@color/colorTextNormal"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ws_title_tv" />

    <Button
        android:id="@+id/ws_to_course_list"
        style="@style/AppTheme.MainButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_courses"
        android:text="@string/ws_to_courses"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ws_subtitle_tv"
        app:layout_constraintVertical_bias="0.30" />

    <Button
        android:id="@+id/ws_to_student_list"
        style="@style/AppTheme.MainButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_students"
        android:text="@string/ws_to_student_list"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ws_to_course_list" />

    <Button
        android:id="@+id/ws_to_report"
        style="@style/AppTheme.MainButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_report"
        android:text="@string/ws_to_report"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ws_to_student_list" />


</androidx.constraintlayout.widget.ConstraintLayout>